delete class btn-grey in html and update js

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="calculator">
         <div class="display">0</div>
         <div class="buttons">
-            <button class="button btn-grey">AC</button>
-            <button class="button btn-grey">+/-</button>
-            <button class="button btn-grey">%</button>
+            <button class="button btn-orange">AC</button>
+            <button class="button btn-orange">√</button>
+            <button class="button btn-orange">%</button>
             <button class="button btn-orange">/</button>
             <button class="button">7</button>
             <button class="button">8</button>
